# gdrf

./: .dockerignore  .gitignore  404.html  AUTHORS.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  pr.yml  release.yml
api/: index.html
authors/: index.html
contributing/: index.html
data/: IFCB_classlist_type.csv  cfg.yaml  data_2d_artificial.csv  master_classlist_northeastshelf.csv  test_matrix.csv
docs/: api.md  installation.md  usage.md
gdrf/: __init__.py  cli.py  gdrf.py  gdrf2.py  gpytorch_gdrf.py  grid_gdrf.py  histogramdd.py  kernel.py  likelihoods.py  mvco.py  mvco_grid.py  mvco_hyperparam_opt.py  mvco_video.py  plot_mvco.py  sensory_deprivation.py  topic_model.py  train.py  train_script.py  utils.py
gdrf/infer/: __init__.py  divergence.py  gvi.py  loss.py
gdrf/models/: __init__.py  abstract_gdrf.py  categorical.py  gdrf.py  simple_gdrf.py  sparse_gdrf.py  topic_model.py  train.py  utils.py  visualize.py
gdrf/utils/: callbacks.py  general.py  loggers.py  wandblogger.py
gdrf/visualize/: __init__.py
history/: index.html
installation/: index.html
scripts/: mvco.py
search/: search_index.json
tests/: __init__.py  test_gdrf.py
usage/: index.html
