[tool]
[tool.poetry]
name = "gdrf"
version = "0.1.3"
homepage = "https://github.com/san-soucie/gdrf"
description = "Pytorch+GPytorch implementation of GDRFs from San Soucie et al. 2020."
authors = ["John San Soucie <jsansoucie@whoi.edu>"]
readme = "README.md"
license =  "GPL3"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "gdrf" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
fire = "^0.4.0"
wandb = {version = "^0.12.0", optional = true}
pandas = "<1.3.0"
torch = "^1.9.0"
torchvision = "^0.10.0"
pyro-ppl = "^1.6.0"
gpytorch = "^1.5.0"
numpy = "^1.21.0"
scipy = "^1.7.0"
matplotlib = "^3.4.2"
tqdm = "^4.61.1"
pyyaml = "^5.4.0"
plotly = "^5.2.2"
pillow = "^8.3.2"
holoviews = "^1.14.6"
hvplot = "^0.7.3"
black  = {optional = true, version = "^20.8b1"}
isort  = {optional = true, version = "^5.6.4"}
flake8  = {optional = true, version = "^3.8.4"}
flake8-docstrings = {optional = true, version = "^1.6.0"}
pytest  = {optional = true, version = "^6.1.2"}
pytest-cov = {optional = true, version = "^2.10.1"}
tox  = {optional = true, version = "^3.20.1"}
virtualenv  = {optional = true, version = "^20.2.2"}
pip  = {optional = true, version = "^20.3.1"}
poetry  = {optional = true, version = "^1.1.10"}
mkdocs  = {optional = true, version = "^1.1.2"}
mkdocs-include-markdown-plugin  = {optional = true, version = "^1.0.0"}
mkdocs-material  = {optional = true, version = "^6.1.7"}
mkdocstrings  = {optional = true, version = "^0.15.2"}
mkdocs-material-extensions  = {optional = true, version = "^1.0.1"}
twine  = {optional = true, version = "^3.3.0"}
mkdocs-autorefs = {optional = true, version = "0.1.1"}
pre-commit = {optional = true, version = "^2.12.0"}
toml = {optional = true, version = "^0.10.2"}


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "poetry"]

doc = [
    "wandb",
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.poetry.scripts]
gdrf = 'gdrf.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | wandb
  | venv
)/
'''
